# PCL_methods

./: README.txt
1 PLY2PCD/: CMakeLists.txt  ply2pcd  readme.txt
1 PLY2PCD/include/: pretreatment.h
1 PLY2PCD/src/: ply2pcd.cpp  pretreatment.cpp
10 SAC_IA_ICP/: CMakeLists.txt  readMe.txt
10 SAC_IA_ICP/data/: object_templates.txt
10 SAC_IA_ICP/src/: plate_alignment.cpp
11 Align_Nobase/: CMakeLists.txt  readMe.txt
11 Align_Nobase/data_nobase/: object_templates.txt
11 Align_Nobase/src/: plate_alignment.cpp
12 Modification/: CMakeLists.txt
12 Modification/data_nobase/: model_b1.pcd  model_b2.pcd  model_b3.pcd  model_m1.pcd  model_m2.pcd  object_templates.txt
12 Modification/src/: stack_plates.cpp
13 Extract_Ring/: CMakeLists.txt  readme.txt
13 Extract_Ring/src/: extract_ring.cpp
2 PC_Unit2Size/: readme.txt
3 Cloudviewer/: CMakeLists.txt  readme.txt
3 Cloudviewer/src/: show.cpp
4 Cluster_extract/: About Cluster alignment.txt  CMakeLists.txt  example.pcd  readme.txt
4 Cluster_extract/src/: cir_cluster.cpp
5 Transform/: CMakeLists.txt  readme.txt
5 Transform/src/: transform.cpp
6 modelling/: CMakeLists.txt  readme.txt
6 modelling/src/: modelling.cpp
7 Check_destination/: CMakeLists.txt  readme.txt
7 Check_destination/src/: check.cpp
8 SAC_IA/: model_nobase.pcd  template_alignment
8 SAC_IA/data/: model_aligned_0.pcd  model_aligned_1.pcd  object_templates.txt
8 SAC_IA/src/: template_alignment.cpp
9 ICP/: iterative_closest_point
9 ICP/data/: icp.pcd  model_nobase.pcd  output.pcd
9 ICP_param/: CMakeLists.txt  readme.txt
(+2 files in other folders)
